@@ -14,10 +14,11 @@
  * limitations under the License.
  */
 
-package com.navercorp.pinpoint.web.config;
+package com.navercorp.pinpoint.login.basic.config;
 
 import com.navercorp.pinpoint.common.util.CollectionUtils;
 import com.navercorp.pinpoint.common.util.StringUtils;
+import org.springframework.beans.factory.InitializingBean;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
@@ -25,16 +26,14 @@ import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.util.Assert;
 
-import javax.annotation.PostConstruct;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 
 /**
  * @author Taejin Koo
  */
-public class BasicLoginConfig {
+public class BasicLoginProperties implements InitializingBean {
 
     private static final String DEFAULT_JWT_SECRET_KEY = "PINPOINT_JWT_SECRET";
 
@@ -71,8 +70,8 @@ public class BasicLoginConfig {
         return DEFAULT_EXPIRATION_TIME_SECONDS;
     }
 
-    @PostConstruct
-    public void setup() {
+    @Override
+    public void afterPropertiesSet() throws Exception {
         this.userList = createUser(userIdAndPasswordPairList);
 
         this.adminList = createAdmin(adminIdAndPasswordPairList);
@@ -90,7 +89,7 @@ public class BasicLoginConfig {
 
     private List<UserDetails> createUserDetails(List<String> idAndPasswordList, String role) {
         if (CollectionUtils.isEmpty(idAndPasswordList)) {
-            return Collections.emptyList();
+            return List.of();
         }
 
         List<UserDetails> users = new ArrayList<>(idAndPasswordList.size());
